--- a/MyApplication/app/src/main/res/layout/message_item.xml
+++ b/MyApplication/app/src/main/res/layout/message_item.xml
@@ -9,5 +9,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:background="@android:color/darker_gray" />
+        android:background="@drawable/white" />
 </LinearLayout>
