--- a/MyApplication/app/src/main/res/layout/fragment_main.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_main.xml
@@ -10,9 +10,23 @@
 
     <fragment
         android:id="@+id/fragmentView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:name="com.example.gmomedia.myapplication.MessageFragment"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.example.gmomedia.myapplication.MessageFragment"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:id="@+id/button_jump_post_activity"
+        android:text="POST"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginBottom="14dp" />
 
 </RelativeLayout>
